Refactored ExecutorConfig to be a Java bean with getters and setters.
git-svn-id: http://hazelcast.googlecode.com/svn/trunk@303 3f8e66b6-ca9d-11dd-a2b5-e5f827957e07